Second semester's work added

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -128,21 +128,21 @@
 }
 
 @unpublished{ANote,
-  title = {{Measurement of the differential Drell-Yan cross section at √s = 13 TeV}},
+  title = {{Measurement of the differential Drell-Yan cross section at $\sqrt{s} = 13\ \mathrm{TeV}$}},
   year = {2017},
   howpublished = {CMS AN-15-324}
 }
 
 @misc{TightMuon,
   author  = {{The CMS Collaboration}},
-  title   = {{Performance of the CMS muon detector and muon reconstruction with proton-proton collisions at $\sqrt{s} = 13$ TeV}},
+  title   = {{Performance of the CMS muon detector and muon reconstruction with proton-proton collisions at $\sqrt{s} = 13\ \mathrm{TeV}$}},
   year    = {2018},
   howpublished = {CMS-MUO-16-001}
 }
 
 @misc{MediumID8,
   author  = {{The CMS Collaboration}},
-  title   = {{Performance of electron reconstruction and selection with the CMS detector in proton-proton collisions at $\sqrt{s}= 8$ TeV}},
+  title   = {{Performance of electron reconstruction and selection with the CMS detector in proton-proton collisions at $\sqrt{s} = 8\ \mathrm{TeV}$}},
   year    = {2015},
   howpublished = {JINST 10 P06005}
 }
@@ -181,7 +181,7 @@
 
 @misc{FakeRateZ,
   author  = {{The ATLAS Collaboration}},
-  title   = {{Measurement of isolated-photon pair production in pp collisions at $\sqrt{s} = 7$ TeV with the ATLAS detector}},
+  title   = {{Measurement of isolated-photon pair production in $pp$ collisions at $\sqrt{s} = 7\ \mathrm{TeV}$ with the ATLAS detector}},
   year    = {2013},
   howpublished = {JHEP 1301 086}
 }
@@ -261,7 +261,7 @@
 
 @misc{DY2018,
   author  = {{The CMS Collaboration}},
-  title   = {{Measurement of the differential Drell-Yan cross section in proton-proton collisions at $\sqrt{s}=13 \, \mathrm{TeV}$}},
+  title   = {{Measurement of the differential Drell-Yan cross section in proton-proton collisions at $\sqrt{s}=13\ \mathrm{TeV}$}},
   howpublished = {CERN-EP-2018-320},
   year    = {2018}
 }
@@ -301,14 +301,14 @@
 
 @misc{MuonID,
   author  = {{The CMS Collaboration}},
-  title   = {{Performance of the CMS muon detector and muon reconstruction with proton-proton collisions at $\sqrt{s}=13 \, \mathrm{TeV}$}},
+  title   = {{Performance of the CMS muon detector and muon reconstruction with proton-proton collisions at $\sqrt{s}=13\ \mathrm{TeV}$}},
   howpublished = {JINST 13 P06015},
   year    = {2018}
 }
 
 @misc{EleID,
   author  = {{The CMS Collaboration}},
-  title   = {{Performance of electron reconstruction and selection with the CMS detector in proton-proton collisions at $\sqrt{s}=8 \, \mathrm{TeV}$}},
+  title   = {{Performance of electron reconstruction and selection with the CMS detector in proton-proton collisions at $\sqrt{s}=8\ \mathrm{TeV}$}},
   howpublished = {JINST 10 P06005},
   year    = {2015}
 }
@@ -322,14 +322,14 @@
 
 @misc{Ecorr,
   author  = {{The CMS Collaboration}},
-  title   = {{ Energy Calibration and Resolution of the CMS Electromagnetic Calorimeter in $pp$ Collisions at $\sqrt{s}=7 \, \mathrm{TeV}$}},
+  title   = {{Energy Calibration and Resolution of the CMS Electromagnetic Calorimeter in $pp$ Collisions at $\sqrt{s}=7\ \mathrm{TeV}$}},
   howpublished = {JINST 8 P09009},
   year    = {2013}
 }
 
 @misc{ttbarPT,
   author  = {{The CMS Collaboration}},
-  title   = {{Measurement of differential cross sections for top quark pair production using the lepton+jets final state in proton-proton collisions at $13 \, \mathrm{TeV}$}},
+  title   = {{Measurement of differential cross sections for top quark pair production using the lepton+jets final state in proton-proton collisions at $13\ \mathrm{TeV}$}},
   howpublished = {Phys.\ Rev.\ D95, 092001},
   year    = {2017}
 }
@@ -357,14 +357,14 @@
 
 @misc{Zprime,
   author  = {{The CMS Collaboration}},
-  title   = {{Search for narrow resonances in dilepton mass spectra in proton-proton collisions at $\sqrt{s}=13 \, \mathrm{TeV}$ and combination with $8 \, \mathrm{TeV}$ data}},
+  title   = {{Search for narrow resonances in dilepton mass spectra in proton-proton collisions at $\sqrt{s}=13\ \mathrm{TeV}$ and combination with $8\ \mathrm{TeV}$ data}},
   howpublished = {Phys.\ Lett.\ B768, 57},
   year    = {2017}
 }
 
 @misc{SUSYtau,
   author  = {{The CMS Collaboration}},
-  title   = {{Search for supersymmetry in events with a $\tau$ lepton pair and missing transverse momentum in proton-proton collisions at $\sqrt{s}=13 \, \mathrm{TeV}$}},
+  title   = {{Search for supersymmetry in events with a $\tau$ lepton pair and missing transverse momentum in proton-proton collisions at $\sqrt{s}=13\ \mathrm{TeV}$}},
   howpublished = {JHEP 11 151},
   year    = {2018}
 }
@@ -395,4 +395,39 @@
   title   = {{Particle-flow reconstruction and global event description with the CMS detector}},
   howpublished = {JINST 12 P10003},
   year    = {2017}
+}
+
+@misc{MAbak,
+  author  = {{M.\ Ambrozas}},
+  title   = {{Drell-Yan proceso triukšmo įvykių skaičiaus įvertinimas $e\mu$ metodu}},
+  howpublished = {Fizikos bakalauro studijų programos baigiamasis darbas. Vad.\ A.\ Juodagalvis. Vilnius: Vilniaus universitetas, Fizikos fakultetas},
+  year    = {2018}
+}
+
+@misc{MAk1,
+  author  = {{M.\ Ambrozas}},
+  title   = {{Drell-Yan proceso tyrimas analizuojant CERN CMS eksperimento 2016 metų protonų susidūrimo duomenis}},
+  howpublished = {Teorinės fizikos ir astrofizikos magistrantūros studijų programos mokslo tiriamasis darbas. Vad.\ A.\ Juodagalvis. Vilnius: Vilniaus universitetas, Fizikos fakultetas},
+  year    = {2019}
+}
+
+@misc{DY8TeVatlas,
+  author  = {{The ATLAS Collaboration}},
+  title   = {{Measurement of the Drell-Yan triple-differential cross section in $pp$ collisions at $\sqrt{s} = 8\ \mathrm{TeV}$}},
+  howpublished = {JHEP 12 059},
+  year    = {2017}
+}
+
+@misc{DY7TeVatlas,
+  author  = {{The ATLAS Collaboration}},
+  title   = {{Measurement of the high-mass Drell-Yan differential cross-section in $pp$ collisions at $\sqrt{s} = 7\ \mathrm{TeV}$ with the ATLAS detector}},
+  howpublished = {Phys. Lett. B725, 223},
+  year    = {2013}
+}
+
+@misc{DY2011,
+  author  = {{The CMS Collaboration}},
+  title   = {{Measurement of the Drell-Yan Cross Section in $pp$ Collisions at $\sqrt{s} = 7\ \mathrm{TeV}$}},
+  howpublished = {JHEP 1110 007},
+  year    = {2011}
 }
