Added new semester thesis

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -268,7 +268,7 @@
 
 @misc{LHC,
   title   = {{The Large Hadron Collider}},
-  howpublished = {\url{https://home.cern/science/accelerators/large-hadron-collider} [žiūr. 2019-04-02]}
+  howpublished = {\url{https://home.cern/science/accelerators/large-hadron-collider} [žiūr. 2020-01-03]}
 }
 
 @misc{CMStrig,
@@ -314,7 +314,7 @@
 }
 
 @misc{RocCorr,
-  author  = {{A. Bodek et al.}},
+  author  = {{A.\ Bodek et al.}},
   title   = {{Extracting Muon Momentum Scale Corrections for Hadron Collider Experiments}},
   howpublished = {Eur.\ Phys.\ J.\ C72, 2194},
   year    = {2012}
@@ -335,7 +335,7 @@
 }
 
 @misc{PDF_CTEQ,
-  author  = {{S. Dulat et al.}},
+  author  = {{S.\ Dulat et al.}},
   title   = {{New parton distribution functions from a global analysis of quantum chromodynamics}},
   howpublished = {Phys.\ Rev.\ D93, 033006},
   year    = {2016}
@@ -370,14 +370,14 @@
 }
 
 @misc{DYrapiNNLO,
-  author  = {{Ch. Anastasiou et al.}},
+  author  = {{Ch.\ Anastasiou et al.}},
   title   = {{Dilepton rapidity distribution in the Drell-Yan process at NNLO in QCD}},
   howpublished = {Phys.\ Rev.\ Lett.\ 91, 182002},
   year    = {2003}
 }
 
 @misc{VecBosonNNLO,
-  author  = {{S. Catani et al.}},
+  author  = {{S.\ Catani et al.}},
   title   = {{Vector Boson Production at Hadron Colliders: A Fully Exclusive QCD Calculation at Next-to-Next-to-Leading Order}},
   howpublished = {Phys.\ Rev.\ Lett.\ 103, 082001},
   year    = {2009}
@@ -386,7 +386,7 @@
 @misc{DY2015,
   author  = {{The CMS Collaboration}},
   title   = {{Measurements of differential and double-differential Drell-Yan cross sections in proton-proton collisions at 8 TeV}},
-  howpublished = {Eur. Phys. J. C75, 147},
+  howpublished = {Eur.\ Phys.\ J.\ C75, 147},
   year    = {2015}
 }
 
@@ -397,19 +397,6 @@
   year    = {2017}
 }
 
-@misc{MAbak,
-  author  = {{M.\ Ambrozas}},
-  title   = {{Drell-Yan proceso triukšmo įvykių skaičiaus įvertinimas $e\mu$ metodu}},
-  howpublished = {Fizikos bakalauro studijų programos baigiamasis darbas. Vad.\ A.\ Juodagalvis. Vilnius: Vilniaus universitetas, Fizikos fakultetas},
-  year    = {2018}
-}
-
-@misc{MAk1,
-  author  = {{M.\ Ambrozas}},
-  title   = {{Drell-Yan proceso tyrimas analizuojant CERN CMS eksperimento 2016 metų protonų susidūrimo duomenis}},
-  howpublished = {Teorinės fizikos ir astrofizikos magistrantūros studijų programos mokslo tiriamasis darbas. Vad.\ A.\ Juodagalvis. Vilnius: Vilniaus universitetas, Fizikos fakultetas},
-  year    = {2019}
-}
 
 @misc{DY8TeVatlas,
   author  = {{The ATLAS Collaboration}},
@@ -421,7 +408,7 @@
 @misc{DY7TeVatlas,
   author  = {{The ATLAS Collaboration}},
   title   = {{Measurement of the high-mass Drell-Yan differential cross-section in $pp$ collisions at $\sqrt{s} = 7\ \mathrm{TeV}$ with the ATLAS detector}},
-  howpublished = {Phys. Lett. B725, 223},
+  howpublished = {Phys.\ Lett.\ B725, 223},
   year    = {2013}
 }
 
@@ -430,4 +417,100 @@
   title   = {{Measurement of the Drell-Yan Cross Section in $pp$ Collisions at $\sqrt{s} = 7\ \mathrm{TeV}$}},
   howpublished = {JHEP 1110 007},
   year    = {2011}
+}
+
+@misc{DY2013,
+  author  = {{The CMS Collaboration}},
+  title   = {{Measurement of the differential and double-differential Drell-Yan cross sections in proton-proton collisions at $\sqrt{s} = 7\ \mathrm{TeV}$}},
+  howpublished = {JHEP 12 030},
+  year    = {2013}
+}
+
+@misc{DY_firstExp,
+  author  = {{J.\ H.\ Christenson et al.}},
+  title   = {{Observation of Massive Muon Pairs in Hadron Collisions}},
+  howpublished = {Phys.\ Rev.\ Lett.\ 25, 1523},
+  year    = {1970}
+}
+
+@misc{DY2019,
+  author  = {{The CMS Collaboration}},
+  title   = {{Measurement of the differential Drell-Yan cross section in proton-proton collisions at $\sqrt{s} = 13\ \mathrm{TeV}$}},
+  howpublished = {JHEP 12 059},
+  year    = {2019}
+}
+
+@misc{LHC_13TeV_25ns,
+  author  = {{Cian O'Luanaigh}},
+  title   = {{LHC progresses towards higher intensities}},
+  howpublished = {\url{https://cds.cern.ch/record/2051986} [žiūr.\ 2020-01-02]},
+  year    = {2015}
+}
+
+@misc{CTEQ2019,
+  author  = {{T.\ J.\ Hou et al.}},
+  title   = {{New CTEQ global analysis of quantum chromodynamics with high-precision data from the LHC}},
+  howpublished = {MSUHEP-19-025},
+  year    = {2019}
+}
+
+@misc{FeynPartons,
+  author  = {{R.\ P.\ Feynman}},
+  title   = {{Very High-Energy Collisions of Hadrons}},
+  howpublished = {Phys.\ Rev.\ Lett.\ 23, 1415},
+  year    = {1969}
+}
+
+@misc{BjorkPartons,
+  author  = {{J.\ D.\ Bjorken, E.\ A.\ Paschos}},
+  title   = {{Inelastic Electron-Proton and $\gamma$-Proton Scattering and the Structure of the Nucleon}},
+  howpublished = {Phys.\ Rev.\ 185, 1975},
+  year    = {1969}
+}
+
+@misc{AFreedom,
+  author  = {{D.\ J.\ Gross, F.\ Wilczek}},
+  title   = {{Ultraviolet Behavior of Non-Abelian Gauge Theories}},
+  howpublished = {Phys.\ Rev.\ Lett.\ 30, 1343},
+  year    = {1973}
+}
+
+@misc{alphaS,
+  author  = {{T.\ Klijnsma et al.}},
+  title   = {{Determination of the strong coupling constant $\alpha_{s}(m_{Z})$ from measurements of the total cross section for top-antitop-quark production}},
+  howpublished = {Eur.\ Phys.\ J.\ C77, 778},
+  year    = {2017}
+}
+
+@misc{CMScomputing,
+  author  = {{C.\ Grandi et al.}},
+  title   = {{CMS Computing Model: The "CMS Computing Model RTAG"}},
+  howpublished = {CMS-NOTE-2004-031},
+  year    = {2004}
+}
+
+@misc{ROOTarticle,
+  author  = {{I.\ Antcheva et al.}},
+  title   = {{ROOT -- A C++ framework for petabyte data storage, statistical analysis and visualization}},
+  howpublished = {Comput.\ Phys.\ Commun.\ 180, 2499},
+  year    = {2009}
+}
+
+@misc{CMSLumi,
+  title   = {{CMS Luminosity -- Public Results. 2016 proton-proton collisions at $13$ TeV}},
+  howpublished = {\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/LumiPublicResults#2016_proton_proton_collisions} [žiūr. 2020-01-07]}
+}
+
+@misc{Jets,
+  author  = {{S.\ Marzani, G.\ Soyez, M.\ Spannowsky}},
+  title   = {{Looking inside jets: an introduction to jet substructure and boosted-object phenomenology}},
+  howpublished = {Lecture Notes in Physics, vol. 958},
+  year    = {2019}
+}
+
+@misc{LeptonJets,
+  author  = {{The CMS Collaboration}},
+  title   = {{Identification of heavy-flavour jets with the CMS detector in pp collisions at 13 TeV}},
+  howpublished = {JINST 13 P05011},
+  year    = {2018}
 }
