Semester thesis after revision

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -514,3 +514,10 @@
   howpublished = {JINST 13 P05011},
   year    = {2018}
 }
+
+@misc{MAk2,
+  author  = {{Marijus Ambrozas}},
+  title   = {{Drell-Yan proceso triukšmo įvykių skaičiaus įvertinimas matavimu grįstais metodais}},
+  howpublished = {Teorinės fizikos ir astrofizikos magistrantūros studijų programos mokslo tiriamasis darbas. Vad.\ A.\ Juodagalvis. Vilnius: Vilniaus universitetas, Fizikos fakultetas},
+  year    = {2019}
+}
