Semester thesis final version

--- a/Doc/KursinisDarbas3.tex
+++ b/Doc/KursinisDarbas3.tex
@@ -119,7 +119,7 @@ Instituto atstovas & prof.\ Egidijus Anisimovas\tabularnewline[0.5cm]
 
 
 \clearpage
-%\addtocounter{page}{1}
+\addtocounter{page}{1}
 \addtocontents{toc}{\protect\setcounter{tocdepth}{2}}
 \tableofcontents
 \clearpage
