Added master thesis in development

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -267,6 +267,13 @@
 }
 
 @misc{LHC,
+  author  = {{L.\ Evans, P.\ Bryant}},
+  title   = {{LHC Machine}},
+  howpublished = {JINST 3 S08001},
+  year    = {2008}
+}
+
+@misc{LHCurl,
   title   = {{The Large Hadron Collider}},
   howpublished = {\url{https://home.cern/science/accelerators/large-hadron-collider} [žiūr. 2020-01-03]}
 }
@@ -383,7 +390,7 @@
   year    = {2009}
 }
 
-@misc{DY2015,
+@misc{DY_CMS2015,
   author  = {{The CMS Collaboration}},
   title   = {{Measurements of differential and double-differential Drell-Yan cross sections in proton-proton collisions at 8 TeV}},
   howpublished = {Eur.\ Phys.\ J.\ C75, 147},
@@ -398,28 +405,28 @@
 }
 
 
-@misc{DY8TeVatlas,
+@misc{DY_ATLAS2017,
   author  = {{The ATLAS Collaboration}},
   title   = {{Measurement of the Drell-Yan triple-differential cross section in $pp$ collisions at $\sqrt{s} = 8\ \mathrm{TeV}$}},
   howpublished = {JHEP 12 059},
   year    = {2017}
 }
 
-@misc{DY7TeVatlas,
+@misc{DY_ATLAS2013,
   author  = {{The ATLAS Collaboration}},
   title   = {{Measurement of the high-mass Drell-Yan differential cross-section in $pp$ collisions at $\sqrt{s} = 7\ \mathrm{TeV}$ with the ATLAS detector}},
   howpublished = {Phys.\ Lett.\ B725, 223},
   year    = {2013}
 }
 
-@misc{DY2011,
+@misc{DY_CMS2011,
   author  = {{The CMS Collaboration}},
   title   = {{Measurement of the Drell-Yan Cross Section in $pp$ Collisions at $\sqrt{s} = 7\ \mathrm{TeV}$}},
-  howpublished = {JHEP 1110 007},
+  howpublished = {JHEP 10 007},
   year    = {2011}
 }
 
-@misc{DY2013,
+@misc{DY_CMS2013,
   author  = {{The CMS Collaboration}},
   title   = {{Measurement of the differential and double-differential Drell-Yan cross sections in proton-proton collisions at $\sqrt{s} = 7\ \mathrm{TeV}$}},
   howpublished = {JHEP 12 030},
@@ -433,10 +440,10 @@
   year    = {1970}
 }
 
-@misc{DY2019,
+@misc{DY_CMS2019,
   author  = {{The CMS Collaboration}},
   title   = {{Measurement of the differential Drell-Yan cross section in proton-proton collisions at $\sqrt{s} = 13\ \mathrm{TeV}$}},
-  howpublished = {JHEP 12 059},
+  howpublished = {JHEP 12, 059},
   year    = {2019}
 }
 
@@ -484,9 +491,63 @@
 
 @misc{CMScomputing,
   author  = {{C.\ Grandi et al.}},
-  title   = {{CMS Computing Model: The "CMS Computing Model RTAG"}},
-  howpublished = {CMS-NOTE-2004-031},
+  title   = {{CMS Computing Model: The ``CMS Computing Model RTAG''}},
+  howpublished = {CERN-LHCC-2004-035},
   year    = {2004}
+}
+
+@misc{DYNNLO,
+  author  = {{R.\ Hamberg, W.\ L.\ van Neerven, T.\ Matsuura}},
+  title   = {{A complete calculation of the order $\alpha_s^2$ correction to the Drell-Yan K-factor}},
+  howpublished = {Nucl.\ Phys.\ B359, 343},
+  year    = {1991}
+}
+
+@misc{DY2018,
+  author  = {{The CMS Collaboration}},
+  title   = {{Measurement of the differential Drell-Yan cross section in proton-proton collisions at $\sqrt{s}=13\ \mathrm{TeV}$}},
+  howpublished = {CERN-EP-2018-320},
+  year    = {2018}
+}
+
+@misc{LHCurl,
+  title   = {{The Large Hadron Collider}},
+  howpublished = {\url{https://home.cern/science/accelerators/large-hadron-collider} [žiūr. 2020-01-03]}
+}
+
+@misc{Ecorr,
+  author  = {{The CMS Collaboration}},
+  title   = {{Energy Calibration and Resolution of the CMS Electromagnetic Calorimeter in $pp$ Collisions at $\sqrt{s}=7\ \mathrm{TeV}$}},
+  howpublished = {JINST 8 P09009},
+  year    = {2013}
+}
+
+@misc{PDF_CTEQ,
+  author  = {{S.\ Dulat et al.}},
+  title   = {{New parton distribution functions from a global analysis of quantum chromodynamics}},
+  howpublished = {Phys.\ Rev.\ D93, 033006},
+  year    = {2016}
+}
+
+@misc{DYrapiNNLO,
+  author  = {{Ch.\ Anastasiou et al.}},
+  title   = {{Dilepton rapidity distribution in the Drell-Yan process at NNLO in QCD}},
+  howpublished = {Phys.\ Rev.\ Lett.\ 91, 182002},
+  year    = {2003}
+}
+
+@misc{VecBosonNNLO,
+  author  = {{S.\ Catani et al.}},
+  title   = {{Vector Boson Production at Hadron Colliders: A Fully Exclusive QCD Calculation at Next-to-Next-to-Leading Order}},
+  howpublished = {Phys.\ Rev.\ Lett.\ 103, 082001},
+  year    = {2009}
+}
+
+@misc{alphaS,
+  author  = {{T.\ Klijnsma et al.}},
+  title   = {{Determination of the strong coupling constant $\alpha_{s}(m_{Z})$ from measurements of the total cross section for top-antitop-quark production}},
+  howpublished = {Eur.\ Phys.\ J.\ C77, 778},
+  year    = {2017}
 }
 
 @misc{ROOTarticle,
@@ -511,7 +572,7 @@
 @misc{LeptonJets,
   author  = {{The CMS Collaboration}},
   title   = {{Identification of heavy-flavour jets with the CMS detector in pp collisions at 13 TeV}},
-  howpublished = {JINST 13 P05011},
+  howpublished = {JINST 13, P05011},
   year    = {2018}
 }
 
@@ -520,4 +581,95 @@
   title   = {{Drell-Yan proceso triukšmo įvykių skaičiaus įvertinimas matavimu grįstais metodais}},
   howpublished = {Teorinės fizikos ir astrofizikos magistrantūros studijų programos mokslo tiriamasis darbas. Vad.\ A.\ Juodagalvis. Vilnius: Vilniaus universitetas, Fizikos fakultetas},
   year    = {2019}
+}
+
+@misc{QCDalpha,
+  author  = {{A.\ Deur, S.\ J.\ Brodsky, G.\ F.\ de Teramond}},
+  title   = {{The QCD Running Coupling}},
+  howpublished = {Prog.\ Part.\ Nuc.\ Phys.\ 90, 1},
+  year    = {2016}
+}
+
+@misc{PDGreview,
+  author  = {{M.\ Tanabashi et al.\ (Particle Data Group)}},
+  title   = {{Review of Particle Physics}},
+  howpublished = {Phys.\ Rev.\ D 98, 030001},
+  year    = {2018 and 2019 update}
+}
+
+@misc{WZangular,
+  author  = {{E.\ Mirkes, J.\ Ohnemus}},
+  title   = {{W and Z polarization effects in hadronic collisions}},
+  howpublished = {Phys.\ Rev.\ D 50, 5692},
+  year    = {1994}
+}
+
+@misc{DYangular,
+  author  = {{M.\ Lambertsen, W.\ Vogelsang}},
+  title   = {{Drell-Yan lepton angular distributions in perturbative QCD}},
+  howpublished = {Phys.\ Rev.\ D 93, 114013},
+  year    = {2016}
+}
+
+@misc{DYrapi,
+  author  = {{The CMS Collaboration}},
+  title   = {{Measurement of the Rapidity and Transverse Momentum Distributions of $Z$ Bosons in $pp$ Collisions at $\sqrt{s}=7$ TeV}},
+  howpublished = {Phys.\ Rev.\ D 85, 032002},
+  year    = {2012}
+}
+
+@misc{DYAFB_CMS2011,
+  author  = {{The CMS Collaboration}},
+  title   = {{Measurement of the weak mixing angle with the Drell-Yan process in proton-proton collisions at the LHC}},
+  howpublished = {Phys.\ Rev.\ D 84, 112002},
+  year    = {2011}
+}
+
+@misc{DYAFB_ATLAS2015,
+  author  = {{The ATLAS Collaboration}},
+  title   = {{Measurement of the forward-backward asymmetry of electron and muon pair-production in $pp$ collisions at $\sqrt{s}=7$ TeV with the ATLAS detector}},
+  howpublished = {JHEP 09, 049},
+  year    = {2015}
+}
+
+@misc{DYAFB_LHCb2015,
+  author  = {{The LHCb Collaboration}},
+  title   = {{Measurement of the forward-backward asymmetry in $Z/\gamma^* \rightarrow \mu^+\mu^-$ decays and determination of the effective weak mixing angle}},
+  howpublished = {JHEP 11, 190},
+  year    = {2015}
+}
+
+@misc{DYAFB_CMS2018,
+  author  = {{The CMS Collaboration}},
+  title   = {{Measurement of the weak mixing angle using the forward-backward asymmetry of Drell-Yan events in $pp$ collisions at $8$ TeV}},
+  howpublished = {Eur.\ Phys.\ J.\ C 78, 701},
+  year    = {2018}
+}
+
+@misc{Z_CMS2015,
+  author  = {{The CMS Collaboration}},
+  title   = {{Measurement of the $Z$ boson differential cross section in transverse momentum and rapidity in proton-proton collisions at $8$ TeV}},
+  howpublished = {Phys.\ Lett.\ B 749, 187},
+  year    = {2015}
+}
+
+@misc{DY_ATLAS2016,
+  author  = {{The ATLAS Collaboration}},
+  title   = {{Measurement of the double-differential high-mass Drell-Yan cross section in $pp$ collisions at $\sqrt{s}=8$ TeV with the ATLAS detector}},
+  howpublished = {JHEP 08, 009},
+  year    = {2016}
+}
+
+@misc{DY_ATLAS2014,
+  author  = {{The ATLAS Collaboration}},
+  title   = {{Measurement of the low-mass Drell-Yan differential cross section at $\sqrt{s}=7$ TeV using the ATLAS detector}},
+  howpublished = {JHEP 06, 112},
+  year    = {2014}
+}
+
+@misc{Z_LHCb2015,
+  author  = {{The LHCb Collaboration}},
+  title   = {{Measurement of forward $Z\rightarrow e^+e^-$ production at $\sqrt{s}=8$ TeV}},
+  howpublished = {JHEP 05, 109},
+  year    = {2015}
 }
