Master thesis update

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -673,3 +673,59 @@
   howpublished = {JHEP 05, 109},
   year    = {2015}
 }
+
+@misc{Z'_CMS2011,
+  author  = {{The CMS Collaboration}},
+  title   = {{Search for Resonances in the Dilepton Mass Distribution in $pp$ Collisions at $\sqrt{s}=7$ TeV}},
+  howpublished = {JHEP 05, 093},
+  year    = {2011}
+}
+
+@misc{Z'_ATLAS2011,
+  author  = {{The ATLAS Collaboration}},
+  title   = {{Inclusive search for same-sign dilepton signatures in pp collisions at $\sqrt{s}=7$ TeV with the ATLAS detector}},
+  howpublished = {JHEP 10, 107},
+  year    = {2011}
+}
+
+@misc{Z'_CMS2012,
+  author  = {{The CMS Collaboration}},
+  title   = {{Search for narrow resonances in dilepton mass spectra in $pp$ collisions at $\sqrt{s}=7$ TeV}},
+  howpublished = {Phys.\ Lett.\ B 714, 158},
+  year    = {2012}
+}
+
+@misc{Z'_CMS2013,
+  author  = {{The CMS Collaboration}},
+  title   = {{Search for heavy narrow dilepton resonances in $pp$ collisions at $\sqrt{s}=7$ TeV and $\sqrt{s}=8$ TeV}},
+  howpublished = {Phys.\ Lett.\ B 720, 63},
+  year    = {2013}
+}
+
+@misc{Z'_ATLAS2014,
+  author  = {{The ATLAS Collaboration}},
+  title   = {{Search for high-mass dilepton resonances in $pp$ collisions at $\sqrt{s}=8$ TeV with the ATLAS detector}},
+  howpublished = {Phys.\ Rev.\ D 90, 052005},
+  year    = {2014}
+}
+
+@misc{Z'_CMS2015,
+  author  = {{The CMS Collaboration}},
+  title   = {{Search for physics beyond the standard model in dilepton mass spectra in proton-proton collisions at $\sqrt{s}=8$ TeV}},
+  howpublished = {JHEP 04, 025},
+  year    = {2015}
+}
+
+@misc{Z'_CMS2017,
+  author  = {{The CMS Collaboration}},
+  title   = {{Search for narrow resonances in dilepton mass spectra in proton-proton collisions at $\sqrt{s}=13$ TeV and combination with $8$ TeV data}},
+  howpublished = {Phys.\ Lett.\ B 768, 57},
+  year    = {2017}
+}
+
+@misc{Z'_CMS2018,
+  author  = {{The CMS Collaboration}},
+  title   = {{Search for high-mass resonances in dilepton final states in proton-proton collisions at $\sqrt{s}=13$ TeV}},
+  howpublished = {JHEP 06, 120},
+  year    = {2018}
+}
