Master thesis first full draft

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -559,7 +559,7 @@
 
 @misc{CMSLumi,
   title   = {{CMS Luminosity -- Public Results. 2016 proton-proton collisions at $13$ TeV}},
-  howpublished = {\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/LumiPublicResults#2016_proton_proton_collisions} [žiūr. 2020-01-07]}
+  howpublished = {\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/LumiPublicResults#2016_proton_proton_collisions} [žiūr. 2020-05-15]}
 }
 
 @misc{Jets,
@@ -581,6 +581,13 @@
   title   = {{Drell-Yan proceso triukšmo įvykių skaičiaus įvertinimas matavimu grįstais metodais}},
   howpublished = {Teorinės fizikos ir astrofizikos magistrantūros studijų programos mokslo tiriamasis darbas. Vad.\ A.\ Juodagalvis. Vilnius: Vilniaus universitetas, Fizikos fakultetas},
   year    = {2019}
+}
+
+@misc{MAbak,
+  author  = {{Marijus Ambrozas}},
+  title   = {{Drell-Yan proceso triukšmo įvykių skaičiaus įvertinimas $e\mu$ metodu}},
+  howpublished = {Fizikos bakalauro studijų programos baigiamasis darbas. Vad.\ A.\ Juodagalvis. Vilnius: Vilniaus universitetas, Fizikos fakultetas},
+  year    = {2018}
 }
 
 @misc{QCDalpha,
@@ -728,4 +735,32 @@
   title   = {{Search for high-mass resonances in dilepton final states in proton-proton collisions at $\sqrt{s}=13$ TeV}},
   howpublished = {JHEP 06, 120},
   year    = {2018}
+}
+
+@misc{Sherpa,
+  author  = {{T.\ Gleisberg et al.}},
+  title   = {{Event generation with SHERPA 1.1}},
+  howpublished = {JHEP 02, 007},
+  year    = {2009}
+}
+
+@misc{PDF_MMHT2015,
+  author  = {{L.\ A.\ Harland-Lang et al.}},
+  title   = {{Parton distributions in the LHC era: MMHT 2014 PDFs}},
+  howpublished = {Eur.\ Phys.\ J.\ C75, 204},
+  year    = {2015}
+}
+
+@misc{PDF_CJ15,
+  author  = {{A.\ Accardi et al.}},
+  title   = {{Constraints on large-$x$ parton distributions from new weak boson production and deep-inelastic scattering data}},
+  howpublished = {Phys.\ Rev.\ D 93, 114017},
+  year    = {2016}
+}
+
+@misc{PDF_MMHT2019,
+  author  = {{L.\ A.\ Harland-Lang et al.}},
+  title   = {{Ad Lucem: QED Parton Distribution Functions in the MMHT Framework}},
+  howpublished = {Eur.\ Phys.\ J.\ C79, 811},
+  year    = {2019}
 }
