--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -764,3 +764,45 @@
   howpublished = {Eur.\ Phys.\ J.\ C79, 811},
   year    = {2019}
 }
+
+@misc{DYthesis_HERA,
+  author  = {{J.\ Kessler}},
+  title   = {{Search for Drell-Yan in $\sqrt{s} = 41.6$~GeV p-N Collisions at HERA-b}},
+  howpublished = {Doctoral dissertation. Ruperto-Carola University Heidelberg, Germany},
+  year    = {2007}
+}
+
+@misc{DY_comp1993,
+  author  = {{W.\ J.\ Stirling, M.\ R.\ Whalley}},
+  title   = {{A compilation of Drell-Yan cross sections}},
+  howpublished = {J.\ Phys.\ G: Nucl.\ Part.\ Phys.\ 19, D1},
+  year    = {1993}
+}
+
+@misc{DY_CDF1994,
+  author  = {{CDF Collaboration}},
+  title   = {{Measurement of Drell-Yan electron and muon pair differential cross sections in $\bar{p}p$ collisions at $\sqrt{s}=1.8$ TeV}},
+  howpublished = {Phys.\ Rev.\ D 49, R1},
+  year    = {1994}
+}
+
+@misc{DY_D01999,
+  author  = {{D0 Collaboration}},
+  title   = {{Measurement of the High-Mass Drell-Yan Cross Section and Limits on Quark-Electron Compositeness Scales}},
+  howpublished = {Phys.\ Rev.\ Lett.\ 82, 4769},
+  year    = {1999}
+}
+
+@misc{DY_CDF2001,
+  author = {{CDF Collaboration}},
+  title  = {{Measurement of d$\sigma/$d$y$ for High Mass Drell-Yan $e^{+}e^{−}$ Pairs from $p\bar{p}$ Collisions at $\sqrt{s} = 1.8$ TeV}},
+  howpublished = {Phys.\ Rev.\ D 63, 011101},
+  year   = {2001}
+}
+
+@misc{DY_comp2007,
+  author = {{P.\ E.\ Reimer}},
+  title  = {{Exploring the partonic structure of hadrons throughthe Drell–Yan process}},
+  howpublished = {J.\ Phys.\ G: Nucl.\ Part.\ Phys.\ 34, S107},
+  year   = {2007}
+}
